@startuml main_fsm
title TPP-IntelliFence -- Main FSM (MainFSM_t)

skinparam state {
    BorderColor     Black
    FontSize        12
    ArrowFontSize   10
    BackgroundColor White
    MinimumWidth    350
}
skinparam ArrowColor DarkSlateGray

[*] --> STARTUP_ROUTINE

state "STARTUP_ROUTINE" as STARTUP_ROUTINE #LightSkyBlue : Inicializacion del sistema\n- Espera join OTAA LoRaWAN (stack CM0+)\n- Adquiere posicion GPS inicial y configura PSM\n- Envia posicion al servidor via LoRa\n- Aguarda cerco (downlink de vertices)\n- Calcula zona inicial local

state "NORMAL_OPERATION" as NORMAL_OPERATION #PaleGreen : Operacion continua de monitoreo\n- Sub-FSM INITIALIZE: posicion + zona actual\n- Sub-FSM GREEN_ZONE: IMU, CowState, tasa GPS\n- Sub-FSM STIMULUS_ZONE: estimulo segun zona\n- Ciclo: INITIALIZE -> GREEN_ZONE o STIMULUS_ZONE

state "FENCE_TRANSITION" as FENCE_TRANSITION #LightSalmon : Transicion al recibir nueva cerca\n- Desactiva estimulo activo (BLACK_ZONE)\n- Adquiere posicion GPS con nueva cerca cargada\n- Recalcula zona con nuevos vertices\n- Itera hasta confirmar zona verde

STARTUP_ROUTINE  --> NORMAL_OPERATION  : isInGreenZone(cow) == OK\nvaca en zona verde desde el inicio\nmainFSM = NORMAL_OPERATION

STARTUP_ROUTINE  --> FENCE_TRANSITION  : isInGreenZone(cow) != OK\nvaca fuera de zona verde al arrancar\nmainFSM = FENCE_TRANSITION

NORMAL_OPERATION --> FENCE_TRANSITION  : [MSG_ID_LORA_VERTEXES_RECEIVED]\nprocessFenceMessage() OK\nmainFSM = FENCE_TRANSITION

FENCE_TRANSITION --> NORMAL_OPERATION  : zona == GREEN_ZONE\nvaca en zona verde con nuevo cerco\nmainFSM = NORMAL_OPERATION

note right of FENCE_TRANSITION
  La deteccion de nueva cerca puede ocurrir
  en cualquier sub-estado de NORMAL_OPERATION.
  El cambio a FENCE_TRANSITION ocurre al
  finalizar el ciclo del scheduler RTOS.
end note

@enduml
